[package]
name = "hokaku"
version = "0.1.0"
edition = "2021"

[lib]
name = "hokaku"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hokaku-common = { version = "0.1.0", path = "../hokaku-common" }
obs-wrapper = "0.4.1"
